AppIO component changelog:

2011-12-01 Phil Mucci

 * Initial skeleton
